tests/predicates_subtyping/predicates_subtyping.exp
Error ----------------------------------------------------------------------------------------------------- file.js:21:2

Cannot cast `a3` to `typeof is_number` because predicate encoded in return [1] is incompatible with predicate encoded in
return [2]. [incompatible-cast]

   file.js:21:2
   21| (a3: typeof is_number); // error incompatible predicates
        ^^

References:
   pred-decls.js:3:54
    3| declare export function is_string(x: mixed): boolean %checks(typeof x === "string");
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   pred-decls.js:4:54
    4| declare export function is_number(x: mixed): boolean %checks(typeof x === "number");
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:34:2

Cannot cast `b2` to `typeof is_number_def` because predicate encoded in return [1] is incompatible with predicate
encoded in return [2]. [incompatible-cast]

   file.js:34:2
   34| (b2: typeof is_number_def); // error incompatible predicates
        ^^

References:
   file.js:24:3
   24|   return typeof x === 'string';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:27:3
   27|   return typeof x === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:47:2

Cannot cast `b4` to `typeof is_number_def_2a` because predicate function with 1 arguments [1] Predicate function is
incompatible with predicate function with 2 arguments [2]. [incompatible-cast]

   file.js:47:2
   47| (b4: typeof is_number_def_2a); // error: arrity mismatch
        ^^

References:
   file.js:46:17
   46| declare var b4: typeof is_number_def;
                       ^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:47:6
   47| (b4: typeof is_number_def_2a); // error: arrity mismatch
            ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:61:2

Cannot cast `b6` to `typeof is_number_def_2a` because predicate encoded in return [1] is incompatible with predicate
encoded in return [2]. [incompatible-cast]

   file.js:61:2
   61| (b6: typeof is_number_def_2a); // error: is_number_def_2b does not refine at least `y`
        ^^

References:
   file.js:54:3
   54|   return typeof x === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:40:3
   40|   return typeof x === 'number' && typeof y === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 4 errors
